--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <tr>
-  <% User.column_names.each do |column| %>
-    <td><%= user.send(column) %></td>
-  <% end %>
+  <td><%= user.openid %></td>
+  <td><%= Rumoji.decode(user.name) %></td>
+  <td><%= user.cell %></td>
   <td><%= link_to t(:edit), edit_user_path(user) %></td>
   <td><%= link_to t(:destroy), user, method: :delete, data: {confirm: t(:are_you_sure)} %></td>
 </tr>
