--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,5 @@
 <tr>
+  <td><%= user.id %></td>
   <td><%= user.openid %></td>
   <td><%= Rumoji.decode(user.name) %></td>
   <td><%= user.cell %></td>
