--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,10 +8,11 @@
   <table class="table">
     <thead>
       <tr>
-        <% User.column_names.each do |column| %>
-          <th><%= User.human_attribute_name(column) %></th>
-        <% end %>
-        <th colspan="4"><%= t(:operations) %></th>
+        <th><%= User.human_attribute_name(:id) %></th>
+        <th><%= User.human_attribute_name(:openid) %></th>
+        <th><%= User.human_attribute_name(:name) %></th>
+        <th><%= User.human_attribute_name(:cell) %></th>
+        <th colspan="2"><%= t(:operations) %></th>
       </tr>
     </thead>
     <tbody>
